--- a/_posts/projects/2018-12-02- CPR.markdown
+++ b/_posts/projects/2018-12-02- CPR.markdown
@@ -11,9 +11,9 @@ excerpt: We developed CPR robot. We tested our robot in various experiments with
 github: https://github.com/ggory15/HQP_DualArmMobile
 external-website: http://dyros.snu.ac.kr/project/non-holonomic-mobile-manipulator/
 
-image: /assets/img/project-images/awesome-checkin/checkin2-screensaver.png
+image: /assets/img/project-images/5.cpr/main.png
 imageAlt: HQP logo
-image-slider: /assets/img/project-images/slider-images/mobile.png
+image-slider: /assets/img/project-images/5.cpr/main.png
 
 sliderData:
 - video: "http://www.youtube.com/embed/-lfnLhmSk3M"
