--- a/_posts/projects/2018-12-03- DRC.markdown
+++ b/_posts/projects/2018-12-03- DRC.markdown
@@ -11,9 +11,9 @@ excerpt: We particaped in DRC Finals 2015, as Team SNU. I am student leader of o
 github: https://github.com/ggory15/HQP_DualArmMobile
 external-website: http://dyros.snu.ac.kr/project/non-holonomic-mobile-manipulator/
 
-image: /assets/img/project-images/awesome-checkin/checkin2-screensaver.png
+image: /assets/img/project-images/4.drc/main.jpg
 imageAlt: HQP logo
-image-slider: /assets/img/project-images/slider-images/mobile.png
+image-slider: /assets/img/project-images/4.drc/main.jpg
 
 sliderData:
 - video: "http://www.youtube.com/embed/-lfnLhmSk3M"
