--- a/_posts/publications/2014-06-21-KROC14.markdown
+++ b/_posts/publications/2014-06-21-KROC14.markdown
@@ -34,5 +34,6 @@ sourcecode:
 [**PDF file**](http://dyros.snu.ac.kr/wp-content/plugins/uploadingdownloading-non-latin-filename/download.php?id=2295)
 
 ### See More
-Please Visit [**RobotHand-project**]({{ site.url}}/Hand-project).
+Please visit [**Robot Hand project**]({{ site.url}}/robothand-project).
+
 
