--- a/_posts/publications/2016-06-10-ISER2016.markdown
+++ b/_posts/publications/2016-06-10-ISER2016.markdown
@@ -44,10 +44,16 @@ actions.
 
 
 ### Multimedias
-Videos may be not represented in mobile. Please, visit this website in PC, if you want to see these videos. 
+<div class="row projects-display">
+    <div class="twelve columns images">
+        <div class="video-container">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/D9saZERvzf8" frameborder="0" allowfullscreen></iframe>
+        </div>
+    </div>
+</div>
 
 ### See More
-Please Visit [**CPR project**]({{ site.url}}/cpr-project).
+Please Visit [**CPR project**]({{ site.url}}/CPR-project).
 
 
 
