--- a/_posts/publications/2017-05-05-DRC_field.markdown
+++ b/_posts/publications/2017-05-05-DRC_field.markdown
@@ -31,8 +31,14 @@ This paper presents the technical approaches used and experimental results obtai
 [**PDF file**](http://dyros.snu.ac.kr/wp-content/plugins/uploadingdownloading-non-latin-filename/download.php?id=3231)
 
 ### Multimedias
-Videos may be not represented in mobile. Please, visit this website in PC, if you want to see these videos. 
+<div class="row projects-display">
+    <div class="twelve columns images">
+        <div class="video-container">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/aWpyfKkbzf0" frameborder="0" allowfullscreen></iframe>
+        </div>
+    </div>
+</div>
 
 ### See More
-Please Visit [**DRC project**]({{ site.url}}/DRC-project).
+Please visit [**DRC Finals**]({{ site.url}}/DRC-Finals).
 
