--- a/_posts/publications/2018-07-20-EMG-force.markdown
+++ b/_posts/publications/2018-07-20-EMG-force.markdown
@@ -43,6 +43,5 @@ You can see the source codes in my [**git repository**](https://github.com/ggory
 The source codes will be operated in Matlab 
 
 ### See More
-Please Visit [**RobotHand project**]({{ site.url}}/robothand-project).
-
+Please visit [**Robot Hand project**]({{ site.url}}/robothand-project).
 
