--- a/_posts/publications/2014-06-21-KROC14.markdown
+++ b/_posts/publications/2014-06-21-KROC14.markdown
@@ -13,9 +13,9 @@ categories: publications
 tags: Robot_Hand, EMG
 excerpt: This article is accepted in the 9th Korea Robotics Society Annual Conference (KROC).
 
-image: /assets/img/post-images/slider-images/HQP_icra.png
+image: /assets/img/post-images/slider-images/NO.jpg
 imageAlt: HQP logo
-image-slider: /assets/img/post-images/slider-images/HQP_icra.png
+image-slider: /assets/img/post-images/slider-images/NO.jpg
 
 pdf: http://dyros.snu.ac.kr/wp-content/plugins/uploadingdownloading-non-latin-filename/download.php?id=2295
 sourcecode: 
