--- a/_posts/publications/2015-10-24-CICS15.markdown
+++ b/_posts/publications/2015-10-24-CICS15.markdown
@@ -13,9 +13,9 @@ categories: publications
 tags: Imitation
 excerpt: This article is accepted in 2015 Conference on Information and Control Systems (CICS’ 15).
 
-image: /assets/img/post-images/slider-images/HQP_icra.png
+image: /assets/img/post-images/slider-images/NO.jpg
 imageAlt: HQP logo
-image-slider: /assets/img/post-images/slider-images/HQP_icra.png
+image-slider: /assets/img/post-images/slider-images/NO.jpg
 
 pdf: http://dyros.snu.ac.kr/wp-content/plugins/uploadingdownloading-non-latin-filename/download.php?id=2829
 sourcecode: 
