--- a/_posts/publications/2016-11-01-DRC_drive.markdown
+++ b/_posts/publications/2016-11-01-DRC_drive.markdown
@@ -16,9 +16,9 @@ categories: publications
 tags: DRC_Finals, Humanoid
 excerpt: This article is accepted in Journal of Institute of Control, Robotics, and Systems.
 
-image: /assets/img/post-images/slider-images/HQP_icra.png
+image: /assets/img/post-images/slider-images/NO.jpg
 imageAlt: HQP logo
-image-slider: /assets/img/post-images/slider-images/HQP_icra.png
+image-slider: /assets/img/post-images/slider-images/NO.jpg
 
 pdf: http://dyros.cafe24.com/paper/jicrs2016.pdf
 sourcecode: 
