--- a/_posts/posts/2019-01-03-Rome.markdown
+++ b/_posts/posts/2019-01-03-Rome.markdown
@@ -3,7 +3,7 @@ layout: post
 title: 19.01.03 Rome 
 author: Sanghyun Kim
 date:   2019-01-03 7:00:00 -0400
-permalink: /Genova
+permalink: /Rome
 categories: posts
 tags: tour, italy
 excerpt: Visit Rome in Italy
